# sotodo

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  package-lock.json  package.json
.github/workflows/: build.yml  release.yml
assets/: main.css  tailwind.css
src/: actions.rs  app.rs  assets.rs  config.rs  i18n.rs  main.rs  models.rs  platform.rs  reminders.rs  storage.rs  tests.rs  todo_logic.rs  update.rs
src/components/: close_dialog.rs  delete_dialog.rs  empty.rs  mod.rs  settings_dialog.rs  todo_app.rs  todo_dialog.rs  todo_row.rs
